--- a/.env
+++ b/.env
@@ -2,3 +2,21 @@ AZURE_OPENAI_API_KEY=2Q0Xjkur4s3rFKfmNCbuKMuikbdsNJmBOAujoKax9oru0tVwzA75JQQJ99B
 AZURE_OPENAI_ENDPOINT=https://ekp.openai.azure.com/
 AZURE_OPENAI_DEPLOYMENT=gpt-4o-mini
 AZURE_OPENAI_API_VERSION=2024-12-01-preview
+
+
+# ---------- MSAL (Entra ID App Registration) ----------
+CLIENT_ID=cdea3ba9-93c2-4580-be9d-90d3e792939a
+CLIENT_SECRET=3js8Q~i4Wq_sv4GzsVVXlan.Q0swN3XkPeAM5dzY
+TENANT_ID=8f6bd982-92c3-4de0-985d-0e287c55e379
+REDIRECT_URI=http://localhost:5000/getAToken
+
+# ---------- Connection strings ----------
+# AdminDB (holds Users/Roles/Projects/Permissions etc.)
+ADMIN_DB_CONN=Driver={ODBC Driver 18 for SQL Server};Server=tcp:testjahnavi.database.windows.net,1433;Database=Testsqljahnavi;Uid=SQLjahnavi;Pwd=Chinni28;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;
+
+Project DBs
+BILLIO_DB_CONN=Driver={ODBC Driver 18 for SQL Server};Server=tcp:billionew.database.windows.net,1433;Database=billio;Uid=billsql;Pwd=billio@321;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;
+SALES_DB_CONN=Driver={ODBC Driver 18 for SQL Server};Server=tcp:dhee-sql-server.database.windows.net,1433;Database=Sales_DB;Uid=pdeekshitha;Pwd=Dechi@2004;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;
+
+# Optional: force read-only mode on chat
+READ_ONLY=true
