Update environment variables, enhance error handling in API, and improve admin panel UI

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ AZURE_OPENAI_API_VERSION=2024-12-01-preview
 
 
 # ---------- MSAL (Entra ID App Registration) ----------
-CLIENT_ID=cdea3ba9-93c2-4580-be9d-90d3e792939a
-CLIENT_SECRET=3js8Q~i4Wq_sv4GzsVVXlan.Q0swN3XkPeAM5dzY
+CLIENT_ID=b41cbc9a-4d33-4441-bba0-add80165df9c
+CLIENT_SECRET=rK-8Q~rg1o6OSlk9o1JKZmIWN_qXiuhhhoJqTcrx
 TENANT_ID=8f6bd982-92c3-4de0-985d-0e287c55e379
 REDIRECT_URI=http://localhost:5000/getAToken
 
