Enhance RBAC and RLS implementations, update database connections, and improve admin UI functionality

--- a/.env
+++ b/.env
@@ -14,9 +14,9 @@ REDIRECT_URI=http://localhost:5000/getAToken
 # AdminDB (holds Users/Roles/Projects/Permissions etc.)
 ADMIN_DB_CONN=Driver={ODBC Driver 18 for SQL Server};Server=tcp:testjahnavi.database.windows.net,1433;Database=Testsqljahnavi;Uid=SQLjahnavi;Pwd=Chinni28;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;
 
-Project DBs
-BILLIO_DB_CONN=Driver={ODBC Driver 18 for SQL Server};Server=tcp:billionew.database.windows.net,1433;Database=billio;Uid=billsql;Pwd=billio@321;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;
+# Project DBs
 SALES_DB_CONN=Driver={ODBC Driver 18 for SQL Server};Server=tcp:dhee-sql-server.database.windows.net,1433;Database=Sales_DB;Uid=pdeekshitha;Pwd=Dechi@2004;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;
+EMPLOYEE_DB_CONN=Driver={ODBC Driver 18 for SQL Server};Server=tcp:testjahnavi.database.windows.net,1433;Database=EmployeeDB_Test;Uid=SQLjahnavi;Pwd=Chinni28;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;
 
 # Optional: force read-only mode on chat
 READ_ONLY=true
